tests/0006-assignment-infix-operator.src.err
tests/0006-assignment-infix-operator.src:3
ERROR: not yet implemented
 | a + b = "value";
           ^
