tests/0006-assignment-infix-operator.src
let a = 'a';
let b = 'b';
a + b = "value";